centered adobe website url, still need to fix the margins to rid of extra space

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@
 .box-white {
   color: red;
   margin-top: 0px;
+  margin-bottom: 0px;
   width: 400px;
   position: relative;
   top: 30px;
@@ -31,6 +32,13 @@
 
 .info {
   color: grey;
+  position:relative;
+  left:250px;
+}
+
+.h2 {
+  margin-top:0px;
+  padding-top: 0px;
 }
 
 .moreinfo {
@@ -42,4 +50,5 @@
   position: relative;
   bottom: 30px;
   left: 620px;
+  margin: 0px;
 }
